--- a/css/styles.css
+++ b/css/styles.css
@@ -5,18 +5,23 @@
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+ 
     font-size: 16px;
     margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white;
     color: black;
     border: 2px solid #4caf50;
+
+    width: 30%;
+    margin-left: auto;
+    margin-right:auto;
+    display: block;  
   }
 
   .modal-content{
     background-color: lightgreen;
     color: navy;
   }
+
