--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,7 @@
     color: black;
     border: 2px solid #4caf50;
 
-    width: 30%;
+    width: 100%;
     margin-left: auto;
     margin-right:auto;
     display: block;  
@@ -25,10 +25,18 @@
     border-color: black;
 }
 
+.pokemon-list{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  list-style-type: none;
+}
+
   .modal-content{
     background-color: lightgreen;
     color: navy;
   }
+
+
 
 
 
