--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,10 @@
 .button-class {
-    background-color: #4caf50; /* Green */
+    background-color: #4caf50; 
     border: none;
     color: white;
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
- 
     font-size: 16px;
     margin: 4px 2px;
     transition-duration: 0.4s;
@@ -13,16 +12,15 @@
     background-color: white;
     color: black;
     border: 2px solid #4caf50;
-
     width: 100%;
     margin-left: auto;
     margin-right:auto;
     display: block;  
   }
 
-  .btn-outline-success {
-    color: black;
-    border-color: black;
+.btn-outline-success {
+  color: black;
+  border-color: black;
 }
 
 .pokemon-list{
@@ -31,10 +29,12 @@
   list-style-type: none;
 }
 
-  .modal-content{
-    background-color: lightgreen;
-    color: navy;
-  }
+.modal-content{
+  background-color: lightgreen;
+  color: navy;
+}
+
+ 
 
 
 
